// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should display headers when headers are passed in 1`] = `
<div>
  <div
    class="autocomplete"
  >
    <div
      class="container"
    >
      <div
        class="wrapper text"
        data-testid="Form-Field-Wrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":r6:"
          >
            placeholder_name
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <div
              style="position: relative;"
            >
              <input
                autocomplete="off"
                class="input"
                id=":r6:"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders an Autocomplete 1`] = `
<div>
  <div
    class="autocomplete"
  >
    <div
      class="container"
    >
      <div
        class="wrapper text"
        data-testid="Form-Field-Wrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for=":r0:"
          >
            placeholder_name
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <div
              style="position: relative;"
            >
              <input
                autocomplete="off"
                class="input"
                id=":r0:"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
